// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router instance methods getTestFileCallback: insecure 1`] = `
"<!doctype html>
<html>

  <head>
    <script type=\\"text/javascript\\" src=\\"http://foo/bundle/bar\\"></script>
  </head>

  <body>
    <p>Please open developer console</p>
  </body>

</html>"
`;

exports[`Router instance methods getTestFileCallback: secure 1`] = `
"<!doctype html>
<html>

  <head>
    <script type=\\"text/javascript\\" src=\\"https://foo/bundle/bar\\"></script>
  </head>

  <body>
    <p>Please open developer console</p>
  </body>

</html>"
`;

exports[`Router instance methods onError 1`] = `[Error: bar]`;

exports[`Router instance methods onError with message 1`] = `[Error: foo: bar]`;

exports[`Router instance methods onNotFound 1`] = `[Error: Not Found]`;

exports[`Router instance methods onPipelineEmpty 1`] = `[Error: Could not load any of the resources in the payload from storage]`;

exports[`bundling multiple js feeds /bundle/:file 1`] = `
Object {
  "file": "1cd8a3c4418251f677b6cafb19e767feabd9a795ef3c42d459e3d0f978e30ce0.js",
  "uri": "/bundle/1cd8a3c4418251f677b6cafb19e767feabd9a795ef3c42d459e3d0f978e30ce0.js",
}
`;

exports[`bundling single js feed /bundle/js 1`] = `
Object {
  "file": "ecf93dbb50579f1f859cbcb901a184d9cdc75d6f6bca48d43aadf241c924e3bc.js",
  "uri": "/bundle/ecf93dbb50579f1f859cbcb901a184d9cdc75d6f6bca48d43aadf241c924e3bc.js",
}
`;
